# actor-framework

./: CMakeLists.txt
cmake/: CAFConfig.cmake.in  CAFTestHelpers.cmake  OpenCLTargets.cmake  OpenSSLTargets.cmake  build_config.hpp.in
libcaf_core/: CMakeLists.txt
libcaf_core/test/: CMakeLists.txt
libcaf_io/: CMakeLists.txt
libcaf_io/test/: CMakeLists.txt
libcaf_opencl/: CMakeLists.txt
libcaf_opencl/test/: CMakeLists.txt
libcaf_openssl/: CMakeLists.txt
libcaf_openssl/test/: CMakeLists.txt
libcaf_python/: CMakeLists.txt
libcaf_test/: CMakeLists.txt
tools/: CMakeLists.txt
