add_custom_target(all_tools)

# caf-run
if(WIN32)
  message(STATUS "skip caf-run (not supported on Windows)")
else()
  add_executable(caf-run caf-run.cpp)
  target_link_libraries(caf-run caf::core caf::io)
  if (TARGET Threads::Threads)
    target_link_libraries(caf-run Threads::Threads)
  else ()
    if(NOT APPLE)
      target_link_libraries(caf-run -pthread)
      target_compile_options(caf-run PRIVATE -pthread)
    endif ()
  endif ()
  install(FILES caf-run.cpp DESTINATION ${DATADIR}/caf/tools)
  add_dependencies(caf-run all_tools)
endif()

# caf-vec
add_executable(caf-vec caf-vec.cpp)
target_link_libraries(caf-vec caf::core)
install(FILES caf-vec.cpp DESTINATION ${DATADIR}/caf/tools)
add_dependencies(caf-vec all_tools)
